name:                oppai
version:             0.1.0.0
synopsis:            get oppai images
-- description:         
homepage:            http://tanakh.jp
license:             BSD3
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          tanaka.hideyuki@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

executable oppai
  main-is:             main.hs
  -- other-modules:       
  build-depends:       base == 4.*
                     , directory
                     , conduit == 0.3.*
                     , http-conduit == 1.3.*
                     , mtl
                     , bytestring
                     , text
                     , shakespeare-text
                     , aeson
                     , filepath
